finish fixing responsive layout not working on mobile issue. finish about page 111-12-13-06

--- a/style/core.css
+++ b/style/core.css
@@ -67,7 +67,7 @@ html{
 /*    background-color: #3A3A3A;
     color:white;
     border-radius: 1rem;*/
-    border-bottom: 3px solid #3A3A3A;
+    border-bottom: 3px solid #3A3A3A !important;
 }
 
 
@@ -94,6 +94,7 @@ html{
 .links-nav a{
     margin-bottom: 1.75rem;
     padding: 0.5rem 1rem;
+    border-bottom: 3px solid transparent;
 }
 
 .links-external{
@@ -143,6 +144,8 @@ html{
     width:18rem;
     height: 12rem;
     margin-right: 3rem;
+    object-fit: cover;
+    object-position: left;
 }
 .section-galleryWork a:hover,.section-galleryWork a:focus,.section-galleryWork a:active{
     opacity: 0.75;
@@ -205,6 +208,44 @@ html{
 }
 /*//////////////////////////////////////////////////////////////////////*/
 
+
+.section-about p{
+    margin-left: 4rem;
+    margin-right: 22rem;
+    margin-bottom: 2.5rem;
+    font-size: 1.25rem;
+    line-height: 2rem;
+}
+.section-about p em{
+    color: #A6A6A6;
+}
+.section-mybio{
+    align-items: center;
+    margin-top: 1rem;
+    margin-bottom: 1.25rem;
+}
+.section-mybio h2{
+    margin-top: 0;
+    margin-bottom: 1.25rem;
+    font-size: 2rem;
+}
+.section-mybio p{
+    margin:0;
+    margin-bottom: 0.75rem;
+}
+.section-mybio img{
+/*    width: 9rem;*/
+/*    height: 12rem;*/
+    width: 12rem;
+    height: 16rem;    
+    object-fit: cover;
+    margin-right: 1rem;
+}
+
+
+
+
+
 /* <1440px */
 @media screen and (max-width: 90em){
     #section-videoDemo{
@@ -226,6 +267,11 @@ html{
     .section-work p{
         max-width: 35rem;
     }    
+
+    .section-about p{
+        margin-right: 8rem;
+    }
+
 }
 
 /* <890px */
@@ -284,15 +330,20 @@ html{
         align-items: flex-start;
     }
     .section-galleryWork img{
-        width: 100%;
         margin-right: 0;
-        height: auto;
+        width: 30rem;
+        height: 20rem;
+/*        width: 100%;
+        height: auto;*/
     }
     .section-work img, .section-work p{
         height: auto;
         max-width: 100%;
         margin-right: 2rem;
     }  
+    .section-about p{
+        margin-right: 4rem;
+    }    
 }
 
 /* <586*/
@@ -307,6 +358,12 @@ html{
     .section-body header{
         padding-bottom: 0;
     }
+
+    .section-galleryWork img{
+        width:100%;
+        height: auto;
+    }
+
     .logo{
         margin-right: 0;
     }
@@ -319,5 +376,16 @@ html{
     }
     .links-external-small{
         margin-left: 0;
+    }
+
+    .section-about p{
+        margin-left: 0;
+        margin-right: 0;
+    } 
+    .section-mybio{
+        flex-direction: column;
+    }     
+    .section-mybio div{
+        width: 100%;
     }
 }
